--- a/source/template/common/footer.pug
+++ b/source/template/common/footer.pug
@@ -9,7 +9,7 @@
                     ['obituaries', 'obits.html'],
                     ['services', 'services.html'],
                     ['pre-planning', 'pre-planning.html'],
-                    ['feedbacks', 'feedbacks.html'],
+                    ['feedback', 'feedbacks.html'],
                     ['contacts', 'contacts.html'],
                     ['monuments', 'http://pieceofheavenmonuments.com/']
                     ]
