--- a/source/template/common/home_content.pug
+++ b/source/template/common/home_content.pug
@@ -1,12 +1,12 @@
 section.home__content
-    h3.home__main-tile Welcome to Piece fo Heaven Funeral Home
+    h3.home__main-tile Welcome of Piece of Heaven Funeral Home
     .home__top-title
         .home__top-title-wrap
-            .top-title__desc Contact us today if you have experienced a loss and we put your mind in peace.
-            .top-title__desc-text Piece fo Heaven is a family owned and operated Funeral home since 2003. It is never easy to lose a loved one let us give you peace fo mind in knowing we can coordinate and plan every aspect of your loved one's funeral. We will take care of everything and work with you to honor their wishes
+            .top-title__desc Contact us today if you have experienced a loss and we will put your mind at peace.
+            .top-title__desc-text Piece fo Heaven is a family-owned and operated Funeral Home since 2003. It is never easy to lose a loved one, let us give you peace of mind in knowing we can coordinate and plan every aspect of your loved one's funeral. We will take care of everything and work with you to honor their wishes
             .top-title__buttons
                 a(href="/services.html").top-title__link  what we offer
-                a(href="/obits.html").top-title__link.top-title__link--margin up coming services
+                a(href="/obits.html").top-title__link.top-title__link--margin upcoming services
         .home__top-services
             .home__top-services-wrap
                 .home__top-services-icon-wrap
