--- a/source/template/common/main_header.pug
+++ b/source/template/common/main_header.pug
@@ -21,7 +21,7 @@ header.main_header
                     source(srcset="/assets/img/main-title.png" media="(min-width: 768px)")
                     img.main_header__title-pic(src="assets/img/main-title.png" alt="funeral home logo" title="funeral and cremation services")
             h1.main_header__title-maindesc Funeral home
-            h2.main_header__title-secdesc affordable funeral and cremation services
+            h2.main_header__title-secdesc Affordable funeral and cremation services
         .header__arrow-down
             img.header__arrow-down-img(src="assets/img/icons/arrow_down.png" alt="arrow down")
 
