--- a/source/template/common/menu.pug
+++ b/source/template/common/menu.pug
@@ -3,14 +3,14 @@ menu.menu
     ul.menu__list
         -
             var menuData = [
-                ['home', 'index.html', '/index.html'],
-                ['about', 'about.html', '/about.html'],
-                ['obituaries', 'obits.html', '/obits.html'],
-                ['services', 'services.html', '/services.html'],
-                ['pre-planning', 'pre-planning.html', '/pre-planning.html'],
-                ['feedbacks', 'feedbacks.html', '/feedbacks.html'],
-                ['contacts', 'contacts.html', '/contacts.html'],
-                ['monuments', 'http://pieceofheavenmonuments.com', ' ']
+                ['HOME', 'index.html', '/index.html'],
+                ['ABOUT', 'about.html', '/about.html'],
+                ['OBITUARIES', 'obits.html', '/obits.html'],
+                ['SERVICES', 'services.html', '/services.html'],
+                ['PRE-PLANNING', 'pre-planning.html', '/pre-planning.html'],
+                ['FEEDBACK', 'feedbacks.html', '/feedbacks.html'],
+                ['CONTACTS', 'contacts.html', '/contacts.html'],
+                ['MONUMENTS', 'http://pieceofheavenmonuments.com', ' ']
             ]
 
         each item in menuData
