--- a/source/template/common/obits_content.pug
+++ b/source/template/common/obits_content.pug
@@ -2,9 +2,9 @@ section.obits__content
     .obits__title Obituaries
     .obits__serch
         form.searching-form
-            input.search_input(type="text" placeholder="serch" name="search")
+            input.search_input(type="text" placeholder="search" name="search")
             button.search__btn find obituary
-        .obits__search-worning * this obituaries list contains date for last 12 months only
+        .obits__search-worning * the list of obituaries contains data for the last 12 months only
     .obits__container
         ul.obits__list
             -
