--- a/source/template/common/services_content.pug
+++ b/source/template/common/services_content.pug
@@ -3,14 +3,14 @@ section.services__content
     .services__main-desc
         .services__main-section-text.services__main-section-text--paddingtop
             p.
-                Our caring and professional staff are here to support you. We offer a range of personalized services
+                Our caring and professional staff are here to support you. We offer a wide range of personalized services
                 to suit your family’s wishes and requirements. Whether it is a traditional casket funeral or cremation
                 with memorial service, you can count on us to assist you every step of the way.
         ul.services__hilight-list
             li.services__hilight-list-item Basic burial
                 strong $1995
             li.services__hilight-list-item Basic cremation
-                strong $995
+                strong $895
             li.services__hilight-list-item  We accept Life Insurance Policies and Social Security Death Benefits
         .services__main-section-text
             p.
@@ -26,7 +26,7 @@ section.services__content
                     Our staff is professionally trained in assisting all faiths and cultures.
                     We are fully versed in international customs and traditions for burial rites.
                     We take great pride in serving our ethnic communities and our staff is fluent
-                    in multiple languages: English, Russian and Ukrainian.
+                    in multiple languages: English, Russian, and Ukrainian.
     .services__tabs-container
         ul.services__tabs-list
             li.services__tabs-item.tabs__title-active
@@ -40,10 +40,16 @@ section.services__content
                 .services__tabs-content
                     .cremation__content
                         p.
-                            Cremation is chosen by many families and individuals as an affordable alternative to traditional burial.
-                            It is selected for many reasons, ranging from religious beliefs and customs, to environmental concerns.
-                            There are a wide variety of options for the final disposition of cremated remains, such as a niche,
-                            columbaria, mausoleum or scattering.
+                            Cremation is chosen by many families and individuals as an affordable alternative
+                            to traditional burial. It is selected for many reasons, ranging from religious beliefs and
+                            customs to environmental concerns. There is a wide variety of options for the final disposition
+                            of cremated remains, such as a niche, columbaria, mausoleum, or scattering
+                            Direct Cremation (no service) : $895 complete. Includes pick-up from a place of passing,
+                            authorizations and paperwork, cremation fee, container, minimum urn, 1 copy of death
+                            certificate with filing. There are no hidden costs or fees.
+                            Additional services for Direct Cremation (optional): viewing,
+                            memorial service in our beautiful Chapel, casketing and cosmetics,
+                            catered reception and service folders, etc.
                         p.
                             Direct Cremation (no service) : $995 complete. Includes: pick-up from place of passing,
                             authorizations and paperwork, cremation fee, container, minimum urn, 1 copy of death certificate
@@ -55,7 +61,7 @@ section.services__content
                 .services__tabs-content
                     .gen-price__content
                         .gen-price__desc
-                            p for the complete price list of our services and merchandises please call us 720-862-8865 or use
+                            p for the complete price list of our services and merchandise please call us at 720-862-8865 or use
                             a(href="/contacts.html")  form request
                             p to have one provided
                         .price-list
@@ -80,12 +86,12 @@ section.services__content
                                 p $225
                                 p $595
                             .price-list__desc
-                                p (inside of 30ml around area, if weight of body is not over that 300lb)
+                                p (addition charge may apply if 30 miles out of FH location, and if weight of body is over then 300lb)
                                 p (compete prise list can be provided)
                                 p (compete prise list can be provided)
                                 p -
-                                p (in case of autopsy plus $200)
-                                p (renting chapel on weekend and holidays or over work time plus $300)
+                                p (additional charge may apply in case of autopsy - in the amount of $200)
+                                p (additional charge may apply for the renting chapel on weekend and holidays or after work time - in the amount of $300)
                                 p -
                                 p -
                         .price-list--s
@@ -132,7 +138,7 @@ section.services__content
                         .ss__text
                             a(href="https://www.ssa.gov/benefits/survivors/") The Social Security website
                             p.
-                                is a valuable resource for information about all of Social Security's
+                                Is a valuable resource for information about all of Social Security's
                                 programs. There are a number of things you can do online. In addition to using the
                                 Social Security website, you can call them toll-free at 1-800-772-1213.
 
