--- a/source/template/common/about_content.pug
+++ b/source/template/common/about_content.pug
@@ -3,7 +3,12 @@ section.about__content
         .about__top-desc
             .about__title About us
             .about__title-desc
-                .about__title-desc-p Piece fo Heaven is a family owned and operated Funeral home since 2003. Let us give you peace fo mind in knowing we can coordinate and plan every aspect of your loved one's funeral. We will take care of everything and work with you to honor their wishes
+                .about__title-desc-p
+                    p.
+                        Piece fo Heaven is a family owned and operated Funeral home since 2003.
+                        Let us give you peace fo mind in knowing we can coordinate and plan every
+                        aspect of your loved one's funeral. We will take care of everything and
+                        work with you to honor their wishes.
         .about__slider-small_device
             ul.about__slider-small_device--list
                 li.about__slider-small_device--item.active-slide
@@ -29,12 +34,12 @@ section.about__content
                     img.about__employee-pic(src="/assets/img/mila.jpg" alt="piece of heaven employee" title="Mila Katsnelson")
                 .about__employee-persinfo-name Mila
                 .about__employee-persinfo-lastname Katsnelson
-                .about__employee-persinfo-position owner
+                .about__employee-persinfo-position Owner
                 .about__employee-persinfo-desc
                     p.
                         Mila began her career in the funeral home business after the loss of her brother in 2003. Her family had
-                        an unpleasant experience with the funeral home provider and she was inspired to open "Piece fo Heaven", since
-                        it's inception, she has helped more than a thousand families plan a lasting tribute for their loved once.
+                        an unpleasant experience with the funeral home provider and she was inspired to open "Piece of Heaven", since
+                        its inception, she has helped more than a thousand families plan a lasting tribute for their loved ones.
         .about__bg-slider.about__bg-slider--lobby
         .about__employee
             .about__employee-persinfo
@@ -42,10 +47,10 @@ section.about__content
                     img.about__employee-pic(src="/assets/img/andrey.jpg" alt="piece of heaven employee" title="Andrey Kostka")
                 .about__employee-persinfo-name Andrey
                 .about__employee-persinfo-lastname Kostka
-                .about__employee-persinfo-position funeral director
+                .about__employee-persinfo-position Funeral director
                 .about__employee-persinfo-desc
                     p.
-                        Andray, Mila's nephew joined "Piece of Heaven" in 2015 from New York. As a funeral director he enjoys every aspect of funeral
+                        Andray, Mila's nephew joined "Piece of Heaven" in 2015 from New York. As a funeral director, he enjoys every aspect of funeral
                         planning and working with families to provide exceptional service. He is a detail-oriented family man with a beautiful wife and daughter
         .about__bg-slider.about__bg-slider--limo
         .about__employee
@@ -57,8 +62,10 @@ section.about__content
                 .about__employee-persinfo-position Manager
                 .about__employee-persinfo-desc
                     p.
-                        Anatolii, hails from Ukraine and is a specialist in Monument/Memorial construction and design. His behind the scenes support makes
-                        "Piece fo Heaven" operations run smoothly and efficiently. Since he joined out home in 2018, families have remarked that his care compassion and attantion to detail
-                        made a different.
+                        Anatolii hails from Ukraine and is a specialist in Monument/Memorial construction
+                        and design. His behind-the-scenes support makes "Piece of Heaven" operations
+                        run smoothly and efficiently. Since he joined our home in 2018, families
+                        have remarked that his care compassion and attention to detail made a
+                        difference.
 
 
