finale commit 3.1 - pictures has been erased, about title text was updated

--- a/source/template/common/about_content.pug
+++ b/source/template/common/about_content.pug
@@ -5,10 +5,11 @@ section.about__content
             .about__title-desc
                 .about__title-desc-p
                     p.
-                        Piece fo Heaven is a family owned and operated Funeral home since 2003.
-                        Let us give you peace fo mind in knowing we can coordinate and plan every
-                        aspect of your loved one's funeral. We will take care of everything and
-                        work with you to honor their wishes.
+                        In this part of our website, we didn't want copywriters to do their work.
+                        This is a part when we would like to say something from the bottom of our hearts.
+                        Simply want you to know, in our funeral home during the difficult time of the
+                        great loss, you will never see those fake sad faces. We are local, we are family
+                        and we treat every single one as a part of our family.
         .about__slider-small_device
             ul.about__slider-small_device--list
                 li.about__slider-small_device--item.active-slide
