--- a/source/template/common/footer.pug
+++ b/source/template/common/footer.pug
@@ -27,7 +27,7 @@
                         img.footer__refer-icon(src="/assets/img/icons/dinner.png" alt="icon dinner")
                         .footer__refer-text memorial dinner
         .footer_btm
-            .footer__btm-company-name &#169; Piece of Heaven funeral and cremation services, LLC
+            .footer__btm-company-name &#169; Piece of Heaven Funeral and Cremation Services, LLC
             .footer__copyrights   Created by Anatolii Tupkalo for "Piece of Heave"
     a(href="/obits-single.html").link-to-single  obits-single
 
