--- a/source/template/common/about_content.pug
+++ b/source/template/common/about_content.pug
@@ -32,7 +32,7 @@ section.about__content
         .about__employee
             .about__employee-persinfo
                 .about__employee-picwrap
-                    img.about__employee-pic(src="/assets/img/mila.jpg" alt="piece of heaven employee" title="Mila Katsnelson")
+                    img.about__employee-pic(src="/assets/img/mila_new.jpg" alt="piece of heaven employee" title="Mila Katsnelson")
                 .about__employee-persinfo-name Mila
                 .about__employee-persinfo-lastname Katsnelson
                 .about__employee-persinfo-position Owner
