--- a/source/style/common/obits-single.scss
+++ b/source/style/common/obits-single.scss
@@ -19,7 +19,7 @@
   width: 70%;
 }
 .obits-card__title{
-
+  background: #ffffff;
   @include font(32px, $text, $gray);
   padding: 60px 0 30px 0;
 }
