--- a/source/style/common/920.scss
+++ b/source/style/common/920.scss
@@ -7,6 +7,10 @@
     width: 40px;
     height: 40px;
   }
+  .top_line__fb-icon{
+    width: 40px;
+    height: 40px;
+  }
   .top_line__phone-text{
     font-size: 26px;
   }
@@ -25,9 +29,7 @@
   .header__arrow-down{
     display: none;
   }
-  .contact__list{
-    width: 80%;
-  }
+
   .menu{
     display: none;
   }
@@ -102,7 +104,7 @@
   .obits-wishes-form{
     width: 70%;
   }
-    //  -------------------------------------------------------   about
+    //  -------------------------------------------------------   About
   .about__title-desc{
     width: 90%;
   }
@@ -131,8 +133,27 @@
     width: 100%;
   }
   .preplan__content-text{
-    padding: 0 10px 30px 10pxпше;
+    padding: 0 10px 30px 10px;
   }
+
+
+//  ---------------------------------------------------------------  Contacts
+  .contacts__content-wrap{
+    @include flex(column,center, center);
+  }
+  .form__wrap{
+    width: 100%;
+    padding-bottom: 10px;
+  }
+  .contact__list{
+    width: 98%;
+    padding: 60px 0 90px 0;
+  }
+  .contact__list-item--padding{
+  }
+
+
 }
+
 
 
