--- a/source/style/common/contacts_content.scss
+++ b/source/style/common/contacts_content.scss
@@ -1,22 +1,27 @@
 .contacts__title{
   @include font(42px, $title, $gray);
   text-align: center;
-  padding: 30px 0;
+  padding: 90px 0;
   opacity: 0;
   transition: 1.5s;
+  background: #ffffff;
+}
+.contacts__content-wrap{
+  @include flex(row, center, center);
 }
 .contact__list{
   display: block;
-  box-shadow: 0 0 23px 12px rgba(0, 0, 0, .2);
-  margin: 30px auto;
-  padding: 40px 0;
   width: 50%;
+  //box-shadow: 0 0 23px 12px rgba(0, 0, 0, .2);
   text-align: center;
+
 }
 .contact__list-item {
   @include font(28px, $text, $blue);
   padding: 10px 0;
-  font-weight: bold;
+}
+.contact__list-item--padding{
+  padding-bottom: 40px;
 }
 
 .map__display{
@@ -37,14 +42,14 @@
 
 
 .form__wrap{
-  background-image: url("/assets/img/bg.png");
-  background-size: cover;
+  width: 50%;
+  background: #eeeeee;
+  padding-bottom: 60px;
 }
 .contact-form__title{
   text-align: center;
-  @include font(32px, $title, $gray);
+  @include font(32px, $text, $gray);
   padding-top: 50px;
-  margin-bottom: 20px;
 }
 
 
