--- a/source/style/common/footer.scss
+++ b/source/style/common/footer.scss
@@ -48,7 +48,9 @@
 .footer__refer-icon{
   width: 50px;
   height: 50px;
+  margin-bottom: 10px;
 }
+
 
 //------------------------------------------------------------- footer bottom
 
