--- a/source/style/common/home_content.scss
+++ b/source/style/common/home_content.scss
@@ -2,6 +2,7 @@
   position: relative;
 }
 .home__main-tile{
+  background: #ffffff;
   text-align: center;
   @include font(42px, $title, $gray);
   padding: 90px 0;
