--- a/source/style/common/main_header.scss
+++ b/source/style/common/main_header.scss
@@ -24,6 +24,14 @@
 .top_line__phone{
   @include flex(row, center, center);
 }
+.top_line__fb-icon{
+  margin-right: 5px;
+  width: 50px;
+  height: 50px;
+}
+.fb__icon{
+  width: 100%;
+}
 .top_line__phone-icon{
   width: 50px;
   height: 50px;
