--- a/source/style/common/obits-content.scss
+++ b/source/style/common/obits-content.scss
@@ -10,6 +10,7 @@
   padding-bottom: 120px;
 }
 .upcoming__title{
+  background: #ffffff;
   text-align: center;
   @include font(42px, $title, $gray);
   padding: 90px 0 60px 0;
