--- a/source/style/common/preplan_content.scss
+++ b/source/style/common/preplan_content.scss
@@ -2,6 +2,7 @@
   margin-bottom: 40px;
 }
 .preplan__title{
+  background: #ffffff;
   @include font(42px, $title, $gray);
   text-align: center;
   padding: 90px 0;
