--- a/source/template/common/main_header.pug
+++ b/source/template/common/main_header.pug
@@ -8,6 +8,9 @@ header.main_header
         .top_line
             .top_line__content
                 .top_line__phone
+                    .top_line__fb-icon
+                        a(href="https://www.facebook.com/Piece-of-Heaven-103653934880984/?modal=admin_todo_tour").fb__icon-link
+                            img.fb__icon(src="assets/img/icons/fb-header2.png" alt="phone icon")
                     .top_line__phone-icon
                         img.phone__icon(src="assets/img/icons/phone.png" alt="phone icon")
                     .top_line__phone-text 303-369-8382
