html validation correction

--- a/source/template/common/home_content.pug
+++ b/source/template/common/home_content.pug
@@ -31,7 +31,7 @@ section.home__content
             ul.home_obits__list
                 li.home_obits__item
                     .obit__img-wrap
-                        img.obit__img
+                        img(src="#" alt="funeral home eulogy picture").obit__img
                     .obit__firstname
                     .obit__lastname
                     .obit__date
@@ -39,7 +39,7 @@ section.home__content
                         a.obit__link view
                 li.home_obits__item.home_obits__item--middle
                     .obit__img-wrap
-                        img.obit__img
+                        img(src="#" alt="funeral home eulogy picture").obit__img
                     .obit__firstname
                     .obit__lastname
                     .obit__date
@@ -47,7 +47,7 @@ section.home__content
                         a.obit__link view
                 li.home_obits__item
                     .obit__img-wrap
-                        img.obit__img
+                        img(src="#" alt="funeral home eulogy picture").obit__img
                     .obit__firstname
                     .obit__lastname
                     .obit__date
