--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -32,6 +32,7 @@ $title: 'Lora', serif;
 @import 'common/feedbacks_content';
 @import 'common/preplan_content';
 @import 'common/obits-single';
+@import 'common/header_common';
 @import 'common/1500';
 @import 'common/920';
 @import 'common/768';
