--- a/source/template/pages/obits-single.pug
+++ b/source/template/pages/obits-single.pug
@@ -9,7 +9,7 @@ block content
     .popup_menu__burger
         img.popup_menu__burger-icon(src="assets/img/icons/burger_w.png" alt="menu icon")
     include ../common/pop-up_menu
-    include ../common/main_header
+    include ../common/header_common
     include ../common/menu
     .main-container
         .obits-card
