--- a/source/style/common/768.scss
+++ b/source/style/common/768.scss
@@ -198,6 +198,9 @@
   .obits-card__info{
     margin: 0 auto;
   }
+  .upcoming__list-item-input, .upcoming__list-item-name{
+    width: 130px;
+  }
     //  -------------------------------------------------------------   services
   .services__tabs-item{
     font-size: 18px;
