--- a/source/template/pages/obits-single.pug
+++ b/source/template/pages/obits-single.pug
@@ -14,7 +14,7 @@ block content
     .main-container
         .obits-card
             .obits-card__left
-                img.obits-card-img(src="assets/img/zorya.jpg")
+                img.obits-card-img(src="assets/img/obits-test.jpg")
             .obits-card__right
                 .obits-card__info
                     .obits-card__title In loving memory of
