--- a/source/style/common/obits-content.scss
+++ b/source/style/common/obits-content.scss
@@ -39,6 +39,8 @@
   text-align: right;
 }
 .upcoming__list-item-input{
+  padding: 5px;
+  border: 1px solid #cccccc;
   width: 200px;
   text-align: left;
   margin-left: 30px;
